WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29197
wx port: can't get a console message's MessageLevel
https://bugs.webkit.org/show_bug.cgi?id=29197
Summary
wx port: can't get a console message's MessageLevel
Kevin Watters
Reported
2009-09-11 11:35:20 PDT
Each JS console message has an associated "level." We should expose these in the wx API.
Attachments
adds support for console message MessageLevels in the wx api
(2.14 KB, patch)
2009-09-11 11:36 PDT
,
Kevin Watters
kevino
: review+
kevino
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Watters
Comment 1
2009-09-11 11:36:45 PDT
Created
attachment 39456
[details]
adds support for console message MessageLevels in the wx api
Kevin Ollivier
Comment 2
2009-09-13 18:04:55 PDT
Landed in
r48345
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug