Reviewed by Kevin Ollivier.

Add support for console MessageLevel at wx API level.

https://bugs.webkit.org/show_bug.cgi?id=29197


Canonical link: https://commits.webkit.org/39914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48345 268f45cc-cd09-0410-ab3c-d52691b4dbfc