WebKit/wx/WebView.h
@@ -298,6 +298,14 @@ private:
     wxPoint m_position;
 };
 
+// copied from page/Console.h
+enum wxWebViewConsoleMessageLevel {
+    TipMessageLevel,
+    LogMessageLevel,
+    WarningMessageLevel,
+    ErrorMessageLevel
+};
+
 class WXDLLIMPEXP_WEBKIT wxWebViewConsoleMessageEvent : public wxCommandEvent
 {
 #ifndef SWIG
@@ -317,10 +325,14 @@ public:
     wxWebViewConsoleMessageEvent( wxWindow* win = (wxWindow*) NULL );
     wxEvent *Clone(void) const { return new wxWebViewConsoleMessageEvent(*this); }
 
+    wxWebViewConsoleMessageLevel GetLevel() const { return m_level; }
+    void SetLevel(wxWebViewConsoleMessageLevel level) { m_level = level; }
+
 private:
     unsigned int m_lineNumber;
     wxString m_message;
     wxString m_sourceID;
+    wxWebViewConsoleMessageLevel m_level;
 };
 
 class WXDLLIMPEXP_WEBKIT wxWebViewAlertEvent : public wxCommandEvent
